--- a/css/Lesson6/styles2.css
+++ b/css/Lesson6/styles2.css
@@ -1,60 +1,8 @@
-table
-{
-    
-    border-collapse: collapse;
-    overflow: hidden;
+a:active {
+    display: block; Отображать как блок
+    border: 4px solid rebeccapurple;
+margin: 20px;  Внешние отступы
+padding: 10px; Поля (внутренние отступы)
+background: linear-gradient(to top, #4fbd24, #41ec03);
 
 }
-TD, TH {
-    padding: 3px; /* Поля вокруг содержимого таблицы */
-    border: 1px solid black; /* Параметры рамки */
-    text-align: left;
-    position: relative; 
-
-    }
-td:nth-of-type(3) {
-        background-color:#D1D0FB;
-         color:white;
-         font-weight:bold;
-     }
-     tr:nth-of-type(7) {
-        background-color:#D1D0FB;
-         color:white;
-         font-weight:bold;
-     }
-     
-     table td:nth-of-type(3) tr:nth-of-type(1) {
-        background-color:#3B3B93;
-         color:white;
-         font-weight:bold;
-     }
-
-     th {
-        background-color:#7F7FA4;
-             color:white;
-             font-weight:bold;
-    }
-    thead {
-        background-color:#3B3B93;
-         color:white;
-         font-weight:bold;
-     }
-  tr:hover ::after {
-         background-color: rgba(rgb(148, 37, 37), green, blue, alpha);
-         content: "";
-         position: absolute;
-         height: 2000vh;
-         left: 0;
-         top: -1000vh;
-         width: 100%;
-         z-index: -1;
-
-    }
-
-    
-/*tr:hover
-{
-     background-color:#7e4ff7;
-      color:white;
-}*/
-    
